@@ -1,3 +1,8 @@
+2004-07-13  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtktreeviewcolumn.c (_gtk_tree_view_column_get_neighbor_sizes): 
+	Make this work in RTL context.
+
 2004-07-13  Federico Mena Quintero  <federico@ximian.com>
 
 	* gtk/gtkfilechooserdefault.c (shortcuts_activate_volume): Set a
@@ -10,6 +15,7 @@
 	Prepare to handle composite implementations of
 	GtkCellEditable, but recursively poking at
 	allocation->y (hack stolen from GtkCList).
+	(check_expander_max): Tweak the warning.
 
 	* gtk/gtkmain.h: Add gtk_parse_args(), its a public 
 	function.  (#147476, Owen Taylor)
